# pentobi

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  CTestCustom.cmake  HACKING.md  INSTALL  INSTALL.md  NEWS  NEWS.md  Pentobi.pro  README  README.md  appveyor.yml  config-cmake.h.in  config.h.in
data/: CMakeLists.txt  io.sourceforge.pentobi.appdata.xml.in  io.sourceforge.pentobi.desktop.in  io.sourceforge.pentobi.kde-thumbnailer.metainfo.xml.in  net.sf.pentobi.appdata.xml.in  net.sf.pentobi.kde-thumbnailer.metainfo.xml.in  pentobi-kde-thumbnailer.metainfo.xml.in  pentobi-mime.xml  pentobi.appdata.xml  pentobi.appdata.xml.in  pentobi.desktop.in  pentobi.schemas.in  pentobi.thumbnailer.in
doc/man/: CMakeLists.txt  pentobi-thumbnailer.6.in  pentobi.6.in
libboardgame_base/: ArrayList.h  Assert.cpp  Assert.h  Barrier.cpp  Barrier.h  CMakeLists.txt  Compiler.h  CoordPoint.cpp  CoordPoint.h  CpuTime.cpp  CpuTime.h  CpuTimeSource.cpp  CpuTimeSource.h  Engine.cpp  FmtSaver.h  Geometry.h  GeometryUtil.h  Grid.h  IntervalChecker.cpp  IntervalChecker.h  Log.cpp  Log.h  Marker.h  MathUtil.h  Memory.cpp  Memory.h  Options.cpp  Options.h  Point.h  RandomGenerator.cpp  RandomGenerator.h  Range.h  Rating.cpp  Rating.h  Reader.cpp  Reader.h  RectGeometry.h  RectTransform.cpp  RectTransform.h  SgfError.cpp  (+27 more)
libboardgame_base/tests/: ArrayListTest.cpp  CMakeLists.txt  MarkerTest.cpp  OptionsTest.cpp  PointTransformTest.cpp  RatingTest.cpp  RectGeometryTest.cpp  SgfNodeTest.cpp  SgfTreeTest.cpp  SgfUtilTest.cpp  StatisticsTest.cpp  StringRepTest.cpp  StringUtilTest.cpp  TreeReaderTest.cpp
libboardgame_util/: Abort.cpp  Assert.h  CMakeLists.txt  Compiler.h  CpuTime.cpp  CpuTime.h  CpuTimeSource.cpp  CpuTimeSource.h  IntervalChecker.cpp  IntervalChecker.h  MathUtil.h  Memory.cpp  Memory.h  Options.cpp  Options.h  RandomGenerator.cpp  RandomGenerator.h  Range.h  StringUtil.cpp  TimeIntervalChecker.cpp  TimeSource.h  Timer.cpp  Timer.h  WallTimeSource.h
libboardgame_util/tests/: OptionsTest.cpp
libpentobi_kde_thumbnailer/: CMakeLists.txt
libpentobi_thumbnail/: CMakeLists.txt  CreateThumbnail.cpp
pentobi/: AboutDialog.qml  AnalyzeDialog.qml  AnalyzeGame.qml  AnalyzeGameModel.cpp  AnalyzeGameModel.h  AndroidUtils.cpp  AndroidUtils.h  AppearanceDialog.qml  Board.qml  BoardContextMenu.qml  ButtonCancel.qml  ButtonClose.qml  ButtonOk.qml  CMakeLists.txt  Comment.qml  ComputerDialog.qml  DialogButtonBoxClose.qml  DialogButtonBoxOkCancel.qml  DialogLoader.qml  DocbookReader.cpp  DocbookReader.h  ExportImageDialog.qml  FatalMessage.qml  GameInfoDialog.qml  GameModel.cpp  GameModel.h  GameVariantDialog.qml  GameView.js  GameViewDesktop.qml  GameViewMobile.qml  GotoMoveDialog.qml  HelpDialog.qml  HelpViewer.qml  HelpWindow.qml  ImageProvider.cpp  ImageProvider.h  ImageSaveDialog.qml  InitialRatingDialog.qml  LineSegment.qml  Main.cpp  (+74 more)
pentobi/android/: AndroidManifest.xml  build.gradle
pentobi/android-qt5/: AndroidManifest.xml
pentobi/data/: CMakeLists.txt  pentobi.desktop.in  pentobi.schemas.in
pentobi/docbook/: CMakeLists.txt  create-html  create-pot  custom.xsl  help.qrc  index.docbook  pentobi-manual.pot  update-po  validate
pentobi/help/: CMakeLists.txt  create-pot  create-translations  docbook.its  help.qrc  pentobi-manual.pot
pentobi/i18n/: pentobi_de.ts  pentobi_es.ts  pentobi_fr.ts  pentobi_nb_NO.ts  pentobi_ru.ts  qml_de.ts  qml_en.ts  qml_es.ts  qml_fr.ts  qml_nb_NO.ts  qml_ru.ts  qml_vi.ts  qml_zh_CN.ts  translations.qrc
pentobi/icon/: pentobi_icon.qrc
pentobi/qml/: AboutDialog.qml  AnalyzeDialog.qml  AnalyzeGame.qml  AppearanceDialog.qml  AsciiArtSaveDialog.qml  AsciiArtSaveDialogNative.qml  Board.qml  BoardContextMenu.qml  Button.qml  ButtonApply.qml  ButtonCancel.qml  ButtonClose.qml  ButtonOk.qml  ButtonToolTip.qml  ComboBox.qml  Comment.qml  ComputerDialog.qml  Dialog.qml  DialogButtonBox.qml  DialogButtonBoxOkCancel.qml  DialogLoader.qml  ExportImageDialog.qml  FatalMessage.qml  FileDialog.qml  GameDisplay.js  GameDisplayDesktop.qml  GameDisplayMobile.qml  GameInfoDialog.qml  GameVariantDialog.qml  GameView.js  GameViewDesktop.qml  GameViewMobile.qml  GotoMoveDialog.qml  HelpDialog.qml  HelpViewer.qml  HelpWindow.qml  ImageSaveDialog.qml  ImageSaveDialogNative.qml  InitialRatingDialog.qml  LineSegment.qml  (+54 more)
pentobi/src/: doc_mainpage.cpp
pentobi/unix/: CMakeLists.txt  create-pot  io.sourceforge.pentobi.appdata.xml.in  io.sourceforge.pentobi.desktop.in  io.sourceforge.pentobi.xml.in  manpage.its  manpage.xsl  mime.its  pentobi-manpage.docbook.in  pentobi-mime.xml  pentobi-mime.xml.in  pentobi-unix.pot  pentobi.6.in  update-po
pentobi/windows/: pentobi.rc
pentobi/windows_installer/: install.nsis.in
pentobi_kde_thumbnailer/: CMakeLists.txt  CTestCustom.cmake  PentobiThumbCreator.cpp  PentobiThumbCreator.h  create-pot  io.sourceforge.pentobi.kde_thumbnailer.metainfo.xml.in  pentobi-kde-thumbnailer.pot  pentobi-thumbnail.desktop  update-po
pentobi_kde_thumbnailer/po/: de.po
pentobi_thumbnailer/: CMakeLists.txt  CreateThumbnail.cpp  CreateThumbnail.h  Main.cpp  create-pot  pentobi-thumbnailer-manpage.docbook.in  pentobi-thumbnailer.pot  update-po
pentobi_thumbnailer/i18n/: de.ts  en.ts  es.ts  ru.ts  translations.qrc
pentobi_thumbnailer/po/: LINGUAS  de.po  es.po  ru.po
src/: CMakeLists.txt  doc_libboardgame.cpp  doc_mainpage.cpp
src/book/: CMakeLists.txt  book_classic.blksgf  book_classic_2.blksgf  book_duo.blksgf  book_trigon_2.blksgf  book_trigon_3.blksgf
src/books/: CMakeLists.txt  book_callisto_2.blksgf  book_callisto_2_4.blksgf  book_callisto_3.blksgf  book_classic.blksgf  book_classic_2.blksgf  book_classic_3.blksgf  book_duo.blksgf  book_gembloq.blksgf  book_gembloq_2.blksgf  book_gembloq_2_4.blksgf  book_gembloq_3.blksgf  book_junior.blksgf  book_nexos.blksgf  book_nexos_2.blksgf  book_trigon.blksgf  book_trigon_2.blksgf  book_trigon_3.blksgf  pentobi_books.qrc
src/convert/: CMakeLists.txt  Main.cpp
src/icon/: pentobi_icon.qrc  pentobi_icon_desktop.qrc
src/learn_tool/: CMakeLists.txt  Main.cpp
(+1283 files in other folders)
